Added color selection form

--- a/index.html
+++ b/index.html
@@ -14,20 +14,19 @@
         <header id="div-intro">
             <div class="form-contained">
                 <p>Hola! Quien eres?</p>
-                <select name="" id="select-user">
-                    <option value="Placeholder1">Placeholder1</option>
-                    <option value="Placeholder2">Placeholder2</option>
-                    <option value="Placeholder3">Placeholder3</option>
+                <select id="select-user">
+
+
+
                 </select>
+                <button id="confirm-user" class="confirm-button">Confirma</button>
             </div>
 
             <div class="form-contained">
                 <p>Que color te gusta mas?</p>
-                <select name="" id="select-user">
-                    <option value="green">Verde</option>
-                    <option value="orange">Naranja</option>
-                    <option value="pink">Rosa</option>
+                <select name="" id="select-color">
                 </select>
+                <button id="confirm-color" class="confirm-button">Confirma</button>
             </div>
         </header>
 
